[package]
name = "rsscan"
version = "0.1.0"
edition = "2021"
description = "RsScan - Network Vulnerability Scanner"
authors = ["Seekers Lab"]
license = "MIT"
repository = "https://github.com/fankh/rsscan"
keywords = ["security", "vulnerability", "scanner", "cve", "network"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Network
socket2 = "0.5"
pnet = "0.35"
pnet_datalink = "0.35"
rand = "0.8"

# HTTP client/server
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
hex = "0.4"
csv = "1.3"

# Compression
flate2 = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
ipnetwork = "0.20"
dns-lookup = "2.0"
regex = "1.10"
hostname = "0.3"
os_info = "3.7"
libc = "0.2"

# Platform-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "rsscan"
path = "src/main.rs"

[[bin]]
name = "rsscan-agent"
path = "src/bin/agent.rs"
